Main BG and Config

--- a/index.html
+++ b/index.html
@@ -17,6 +17,17 @@
 	<link rel="stylesheet" href="assets/css/vlt-plugins.css">
 	<link rel="stylesheet" href="assets/css/vlt-main.css">
 	<link rel="stylesheet" href="assets/css/custom.css">
+
+	<style>
+		video {
+		  object-fit: cover;
+		  width: 100vw;
+		  height: 100vh;
+		  position: fixed;
+		  top: 0;
+		  left: 0;
+		}
+	</style>
 </head>
 
 <body class=" animsition">
@@ -38,17 +49,13 @@
 								</li>
 								<li data-menuanchor="Projects"><a href="#Projects">Projects</a>
 								</li>
-								<li data-menuanchor="Blog"><a href="#Blog">Blog</a>
-								</li>
-								<li data-menuanchor="Contact"><a href="#Contact">Contact</a>
-								</li>
 							</ul>
 						</nav>
 					</div>
 				</div>
 				<div class="vlt-navbar-inner--right">
 					<div class="d-flex align-items-center">
-						<div class="vlt-navbar-contacts"><a href="tel:+72126742510">(440) 650-7114</a></div>
+						<div class="vlt-navbar-contacts"><a href="mailto:jeffrey@jeffreyallanbrown.com">jeffrey@jeffreyallanbrown.com</a></div>
 						<a class="vlt-menu-burger js-offcanvas-menu-open" href="#">
 							<svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="square" stroke-linejoin="round">
 								<line x1="3" y1="12" x2="21" y2="12" />
@@ -77,10 +84,6 @@
 				</li>
 				<li data-menuanchor="Projects"><a href="#Projects">Projects</a>
 				</li>
-				<li data-menuanchor="Blog"><a href="#Blog">Blog</a>
-				</li>
-				<li data-menuanchor="Contact"><a href="#Contact">Contact</a>
-				</li>
 			</ul>
 		</nav>
 		<div class="vlt-offcanvas-menu__footer">
@@ -91,27 +94,29 @@
 		</div>
 	</div>
 	<div class="vlt-site-overlay"></div>
-	<div class="vlt-fixed-socials"><a class="vlt-social-icon vlt-social-icon--style-1" href="#"><i class="lnir-linkedin-original"></i></a></div>
+	<div class="vlt-fixed-socials"><a class="vlt-social-icon vlt-social-icon--style-1" href="#"><i class="lnir-github-original"></i></a><a class="vlt-social-icon vlt-social-icon--style-1" href="#"><i class="lnir-linkedin-original"></i></a></div>
 	<main class="vlt-main">
 		<div class="vlt-fullpage-slider" data-loop-top="" data-loop-bottom="" data-speed="450">
 			<div class="vlt-section pp-scrollable" data-anchor="Home">
 				<div class="vlt-section__vertical-align">
 					<div class="vlt-section__content">
-						<div class="vlt-section__ken-burn-background has-mobile-image">
-							<img src="assets/img/home.jpg" alt=""><img src="assets/img/home-mobile.jpg" alt=""></div>
+						<video src="assets/video/glitch-bg-1.mp4" autoplay loop playsinline muted></video>
 						<div class="container">
 							<div class="row">
 								<div class="col-lg-10">
 									<div class="vlt-gap-100"></div>
+									
 									<div class="vlt-gap-15"></div>
+									<!--
 									<div class="vlt-animated-block" data-animation-name="fadeInUpSm" style="animation-delay:.2s; animation-duration:700ms;">
-										<h1 class="vlt-large-heading">Jeffrey<span class="has-accent-color">.</span></h1>
+										<h1 class="vlt-large-heading">Jeffrey<span class="has-accent-color">.</span>Brown<span class="has-accent-color">.</span></h1>
 									</div>
 									<div class="vlt-gap-15"></div>
 									<div class="vlt-animated-block" data-animation-name="fadeInUpSm" style="animation-delay:.3s; animation-duration:700ms;">
-										<p>Full-stack web developer currently based in<br>
+										<p>Full-stack web developer currently based in <br>
 											<span>Cleveland, Ohio.</span></p>
 									</div>
+								-->
 								</div>
 							</div>
 						</div>
@@ -124,7 +129,11 @@
 				<div class="vlt-section__vertical-align">
 					<div class="vlt-section__content">
 						<!--Projects-->
-						<div class="vlt-section__projects-background"><img class="is-active" src="assets/img/project-01.jpg" alt="" loading="lazy"><img src="assets/img/project-02.jpg" alt="" loading="lazy"><img src="assets/img/project-03.jpg" alt="" loading="lazy"></div>
+						<div class="vlt-section__projects-background">
+							<img src="assets/img/deep-space-2.jpg" alt="" loading="lazy">
+							<img src="assets/img/project-02.jpg" alt="" loading="lazy">
+							<img src="assets/img/project-03.jpg" alt="" loading="lazy">
+						</div>
 						<div class="container">
 							<div class="vlt-gap-100"></div>
 							<!--Animated Block-->
@@ -140,27 +149,25 @@
 													<div class="vlt-project-excerpt">
 														<p>Lightweight wrapper for NASA's data APIs.</p>
 													</div>
-													<!--Button--><a class="vlt-btn vlt-btn--primary vlt-btn--md" href="single-product.html" target="_self">See More</a>
+													<a class="vlt-btn vlt-btn--primary vlt-btn--md" href="single-product.html" target="_self">See More</a>
 												</article>
 											</div>
 											<div class="swiper-slide">
-												<!--Product-->
 												<article class="vlt-project">
 													<h3 class="vlt-project-title">Urchin<span class="has-accent-color">.</span></h3>
 													<div class="vlt-project-excerpt">
 														<p>Working with client and community, we deliver masterplans that create vibrant new places and spaces, attract people, and encourage investment through.</p>
 													</div>
-													<!--Button--><a class="vlt-btn vlt-btn--primary vlt-btn--md" href="single-product.html" target="_self">See Project</a>
+													<a class="vlt-btn vlt-btn--primary vlt-btn--md" href="single-product.html" target="_self">See Project</a>
 												</article>
 											</div>
 											<div class="swiper-slide">
-												<!--Product-->
 												<article class="vlt-project">
 													<h3 class="vlt-project-title">Borges<span class="has-accent-color">.</span></h3>
 													<div class="vlt-project-excerpt">
 														<p>Third dry hath saying our over fruit Place creeping creepeth let Good. Created also darkness which open appear cattle Second shall brought wherein given. Moveth.</p>
 													</div>
-													<!--Button--><a class="vlt-btn vlt-btn--primary vlt-btn--md" href="single-product.html" target="_self">See Project</a>
+													<a class="vlt-btn vlt-btn--primary vlt-btn--md" href="single-product.html" target="_self">See Project</a>
 												</article>
 											</div>
 										</div>
@@ -184,141 +191,7 @@
 			</div>
 			
 			
-			<!--Blog-->
-			<!--Section-->
-			<div class="vlt-section pp-scrollable" data-anchor="Blog">
-				<div class="vlt-section__vertical-align">
-					<div class="vlt-section__content">
-						<div class="container">
-							<!--Animated Block-->
-							<div class="vlt-animated-block" data-animation-name="fadeInUpSm" style="animation-delay:0s; animation-duration:700ms;">
-								<h3>Writing</h3>
-							</div>
-							<div class="vlt-gap-100"></div>
-							<div class="row">
-								<div class="col-xl-4">
-									<!--Animated Block-->
-									<div class="vlt-animated-block" data-animation-name="fadeInUpSm" style="animation-delay:.1s; animation-duration:700ms;">
-										<!--Blog Item-->
-										<article class="vlt-post vlt-post--masonry">
-											<div class="vlt-post-border"><span class="top"></span><span class="right"></span><span class="bottom"></span><span class="left"></span></div>
-											<div class="vlt-post-media"><img src="assets/img/blog-01.jpg" alt="" loading="lazy"></div>
-											<div class="vlt-post-content">
-												<header class="vlt-post-header"><span class="vlt-post-date">December 27, 2020</span>
-													<h3 class="vlt-post-title"><a href="single-post.html">Scent in the Voyages</a></h3>
-												</header>
-												<div class="vlt-post-excerpt">
-													<p>Let years seasons given two fowl above is itself shall third night female seasons you’re whales, unto had fowl Herb. Moving so. Said be fruitful first lights creeping deep void, lesser.
-													</p>
-												</div>
-												<footer class="vlt-post-footer"><a class="vlt-read-more-link" href="single-post.html">
-														Read more<svg fill="none" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 16 8">
-															<defs />
-															<path d="M15.3536 4.35355c.1952-.19526.1952-.51184 0-.7071L12.1716.464466c-.1953-.195262-.5119-.195262-.7071 0-.1953.195262-.1953.511845 0 .707104L14.2929 4l-2.8284 2.82843c-.1953.19526-.1953.51184 0 .7071.1952.19527.5118.19527.7071 0l3.182-3.18198zM0 4.5h15v-1H0v1z" fill="currentColor" /></svg></a></footer>
-											</div>
-										</article>
-									</div>
-								</div>
-								<div class="col-xl-4">
-									<div class="vlt-gap-30--lg"></div>
-									<div class="vlt-animated-block" data-animation-name="fadeInUpSm" style="animation-delay:.2s; animation-duration:700ms;">
-										<article class="vlt-post vlt-post--masonry">
-											<div class="vlt-post-border"><span class="top"></span><span class="right"></span><span class="bottom"></span><span class="left"></span></div>
-											<div class="vlt-post-media"><img src="assets/img/blog-02.jpg" alt="" loading="lazy"></div>
-											<div class="vlt-post-content">
-												<header class="vlt-post-header"><span class="vlt-post-date">December 27, 2020</span>
-													<h3 class="vlt-post-title"><a href="single-post.html">Obligatory Preamble</a></h3>
-												</header>
-												<div class="vlt-post-excerpt">
-													<p>Let years seasons given two fowl above is itself shall third night female seasons you’re whales, unto had fowl Herb. Moving so. Said be fruitful first lights creeping deep void, lesser.
-													</p>
-												</div>
-												<footer class="vlt-post-footer"><a class="vlt-read-more-link" href="single-post.html">
-												Read more<svg fill="none" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 16 8">
-												<defs />
-												<path d="M15.3536 4.35355c.1952-.19526.1952-.51184 0-.7071L12.1716.464466c-.1953-.195262-.5119-.195262-.7071 0-.1953.195262-.1953.511845 0 .707104L14.2929 4l-2.8284 2.82843c-.1953.19526-.1953.51184 0 .7071.1952.19527.5118.19527.7071 0l3.182-3.18198zM0 4.5h15v-1H0v1z" fill="currentColor" /></svg></a></footer>
-											</div>
-										</article>
-									</div>
-								</div>
-								<div class="col-xl-4">
-									<div class="vlt-gap-30--lg"></div>
-									<!--Animated Block-->
-									<div class="vlt-animated-block" data-animation-name="fadeInUpSm" style="animation-delay:.3s; animation-duration:700ms;">
-										<!--Blog Item-->
-										<article class="vlt-post vlt-post--masonry">
-											<div class="vlt-post-border"><span class="top"></span><span class="right"></span><span class="bottom"></span><span class="left"></span></div>
-											<div class="vlt-post-media"><img src="assets/img/blog-03.jpg" alt="" loading="lazy"></div>
-											<div class="vlt-post-content">
-												<header class="vlt-post-header"><span class="vlt-post-date">December 27, 2020</span>
-													<h3 class="vlt-post-title"><a href="single-post.html">Secrets of the Serpents</a></h3>
-												</header>
-												<div class="vlt-post-excerpt">
-													<p>Let years seasons given two fowl above is itself shall third night female seasons you’re whales, unto had fowl Herb. Moving so. Said be fruitful first lights creeping deep void, lesser.
-													</p>
-												</div>
-												<footer class="vlt-post-footer"><a class="vlt-read-more-link" href="single-post.html">
-														Read more<svg fill="none" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 16 8">
-															<defs />
-															<path d="M15.3536 4.35355c.1952-.19526.1952-.51184 0-.7071L12.1716.464466c-.1953-.195262-.5119-.195262-.7071 0-.1953.195262-.1953.511845 0 .707104L14.2929 4l-2.8284 2.82843c-.1953.19526-.1953.51184 0 .7071.1952.19527.5118.19527.7071 0l3.182-3.18198zM0 4.5h15v-1H0v1z" fill="currentColor" /></svg></a></footer>
-											</div>
-										</article>
-									</div>
-								</div>
-							</div>
-						</div>
-					</div>
-				</div>
-			</div>
-			<!--Contact-->
-			<!--Section-->
-			<div class="vlt-section pp-scrollable" data-anchor="Contact">
-				<div class="vlt-section__vertical-align">
-					<div class="vlt-section__content">
-						<!--Ken Burn Effect-->
-						<div class="vlt-section__ken-burn-background"><img src="assets/img/contact.jpg" alt=""></div>
-						<div class="container">
-							<div class="row">
-								<div class="col-xl-4">
-									<!--Animated Block-->
-									<div class="vlt-animated-block" data-animation-name="fadeInUpSm" style="animation-delay:0s; animation-duration:700ms;">
-										<h3>Contact</h3>
-										<div class="vlt-gap-30"></div>
-										<p>You'll called for yielding male, so lights Stars abundantly, is their.</p>
-										<div class="vlt-gap-40"></div>
-										<address>27 Queen St, New York USA</address>
-										<p><a class="tel" href="tel:+72126742510">+7 (212) 674-25-10</a></p>
-										<p><a class="email" href="mailto:gilber.design@gmail.com">gilber.design@gmail.com</a></p>
-									</div>
-								</div>
-								<div class="col-xl-6 offset-xl-2">
-									<div class="vlt-gap-70--lg"></div>
-									<!--Animated Block-->
-									<div class="vlt-animated-block" data-animation-name="fadeInUpSm" style="animation-delay:.1s; animation-duration:700ms;">
-										<h4>Let's grab a coffee and jump on conversation <span class="has-accent-color">chat with me.</span></h4>
-										<div class="vlt-gap-20"></div>
-										<form class="vlt-contact-form" novalidate="novalidate">
-											<div class="vlt-form-group">
-												<input type="text" id="name" name="name" required="required" placeholder="Your Name">
-											</div>
-											<div class="vlt-form-group">
-												<input type="email" id="email" name="email" required="required" placeholder="Your Email">
-											</div>
-											<div class="vlt-form-group">
-												<textarea name="message" id="message" rows="3" placeholder="Message"></textarea>
-											</div>
-											<div class="message success">Your message is successfully sent...</div>
-											<div class="message danger">Sorry something went wrong!</div>
-											<!--Button-->
-											<button class="vlt-btn vlt-btn--primary vlt-btn--md">Contact Me</button>
-										</form>
-									</div>
-								</div>
-							</div>
-						</div>
-					</div>
-				</div>
-			</div>
+			
 			<!--Progress Bar-->
 			<div class="vlt-fullpage-slider-progress-bar"><span></span></div>
 		</div>
