Convert Index to Pug

--- a/src/index.html
+++ b/src/index.html
@@ -1,37 +1,4 @@
-<!DOCTYPE html>
-<html class="no-js vlt-is--homepage vlt-is--footer-fixed" lang="en">
-
-<head>
-	<meta charset="utf-8">
-	<title>Homepage | Jeffrey Allan Brown</title>
-	<meta name="description" content="Personal Website of Jeffrey Allan Brown">
-	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-	<link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
-	<link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
-	<link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
-	<link rel="manifest" href="/site.webmanifest">
-	<link rel="stylesheet" href="assets/css/framework/bootstrap.min.css">
-	<link rel="stylesheet" href="assets/fonts/Gilroy/style.css">
-	<link rel="stylesheet" href="assets/fonts/LineIcons/Pro-Regular/font-css/LineIcons.css">
-	<link rel="stylesheet" href="assets/css/vlt-plugins.css">
-	<link rel="stylesheet" href="assets/css/vlt-main.css">
-	<link rel="stylesheet" href="assets/css/custom.css">
-
-	<style>
-		video {
-		  object-fit: cover;
-		  width: 100vw;
-		  height: 100vh;
-		  position: fixed;
-		  top: 0;
-		  left: 0;
-		}
-	</style>
-</head>
-
 <body class=" animsition">
-
 	<header class="vlt-header vlt-header--default">
 		<div class="vlt-navbar vlt-navbar--main vlt-navbar--transparent vlt-navbar--sticky">
 			<div class="vlt-navbar-background"></div>
@@ -100,7 +67,7 @@
 			<div class="vlt-section pp-scrollable" data-anchor="Home">
 				<div class="vlt-section__vertical-align">
 					<div class="vlt-section__content">
-						<video src="assets/video/glitch-bg-1.mp4" autoplay loop playsinline muted></video>
+						<div class="vlt-section__ken-burn-background has-mobile-image"><img src="assets/img/abstract-spiral/black-11.jpg" alt=""><img src="assets/img/glitch-textures/noir12.jpg" alt=""></div>
 						<div class="container">
 							<div class="row">
 								<div class="col-lg-10">
