Main Page Continued

--- a/public/index.html
+++ b/public/index.html
@@ -13,5 +13,15 @@
   </head>
   <body>
     <div class="animsition" id="app"></div>
+
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-172335033-1"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'UA-172335033-1');
+    </script>
+
   </body>
 </html>
